--- a/tsconfig.json
+++ b/tsconfig.json
@@ -57,13 +57,9 @@
 		// "emitDecoratorMetadata": true,               /* Enables experimental support for emitting type metadata for decorators. */
 		/* Advanced Options */
 		"skipLibCheck": true, /* Skip type checking of declaration files. */
-		"forceConsistentCasingInFileNames": true /* Disallow inconsistently-cased references to the same file. */
-	},
-	"exclude": [
-		"node_modules",
-		".dist"
-	],
-	"include": [
-		"src/**/*.ts"
-	]
+		"forceConsistentCasingInFileNames": true /* Disallow inconsistently-cased refere    __test__/app.spec.ts:5:25 - error TS5097: An import path can only end with a '.ts' extension when 'allowImportingTsExtensions' is enabled.
+
+		5 import { esPrimo } from "../src/numeros.ts";nces to the same file. */
+	}
 }
+	
